Changelog
=========

6.1.dev0 - (unreleased)
-----------------------

6.0 - (2017-05-22)
------------------
* Change: fixed PyLint warnings and errors
  [eduard-fironda refs #84949]

5.9 - (2017-04-24)
------------------
* Change: updated package information
  [eduard-fironda]

5.8 - (2017-03-27)
------------------
* Bugfix: Add the EEA Google Analytics as a required js so that it is on all elastic apps.
  Moved required js in getRequiredHead where it should be.
  [demarant refs #83417]

5.7 - (2017-02-14)
------------------
* Change: added render_full_html parameter to getFooter and getHeader
  which if passed with False will render only the template markup
  instead of containing the html, head and body tag
  [ichim-david refs #82166]

5.6 - (2017-01-30)
------------------
* Change: removed sitemap logic as we have the plone sitemap and
  sitemap_view is no longer
  [ichim-david refs #80210]

5.5 - (2016-05-19)
------------------
* Bug fix: Fix pylint warnings
  [ichim-david refs #71940]

5.4 - (2016-02-15)
------------------
* Change: added eea-responsive.js to the js files that should be loaded by
  eea_header.pt
  [ichimdav refs #68007]

5.3 - (2015-10-05)
------------------
* Bugfix: set socket timeout to prevent Zope instances hanging out when the external service is not responding using eventlet
  [lucas refs #29063]

5.2 - (2015-07-28)
------------------
* Fix: getRequestHead now is calleble via ajax
  [lucas refs #27218]

5.1 - (2015-07-09)
------------------
* Bug fix: adjust responsive template
  [lucas refs #27270]

5.0 - (2015-03-17)
------------------
* Change: Switched to curl in the jenkins build install script
  [olimpiurob refs #22402]
* Change: Changed fetch url for jenkins build install script to the install 
  script from the main EEA CPB repository
  [olimpiurob refs #22402]

4.9 - (2013-11-20)
------------------
* Bug fix: patch for losing css/js registry on submit after ac cookie expired
  [simiamih refs #17259]